--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,6 +23,13 @@ services:
     environment:
       POSTGRES_USER: root
       POSTGRES_PASSWORD: root
+  mail_db:
+    build: mailDB
+    image: fitness_mail_db:1.0.0
+    restart: always
+    environment:
+      POSTGRES_USER: root
+      POSTGRES_PASSWORD: root
   swagger-ui:
     build: swagger-ui
     image: fitness_swagger-ui:1.0.0
@@ -34,7 +41,11 @@ services:
     environment:
       - SPRING_DATASOURCE_URL=jdbc:postgresql://user_db:5432/
       - SPRING_DATASOURCE_USERNAME=root
-      - SPRING_DATASOURCE_PASSWORD=root   
+      - SPRING_DATASOURCE_PASSWORD=root
+      - TOKEN_JWTSECRET=secret
+      - TOKEN_JWTISSUER=ITAcademy
+      - EMAIL_SENDURL=http://mailService:8080/send
+      - EMAIL_VERIFYURL=http://mailService:8080/verification
   productService:
     build: productService
     image: fitness_product_service:1.0.0
@@ -42,6 +53,22 @@ services:
       - SPRING_DATASOURCE_URL=jdbc:postgresql://product_db:5432/
       - SPRING_DATASOURCE_USERNAME=root
       - SPRING_DATASOURCE_PASSWORD=root
+      - TOKEN_JWTSECRET=secret
+      - TOKEN_JWTISSUER=ITAcademy
+      - USERDETAILSERVICE_URL=http://userService:8080/users/userDetails/mail/
+  mailService:
+    build: mailService
+    image: fitness_mail_service:1.0.0
+    environment:
+      - SPRING_MAIL_USERNAME=sharam.artur@gmail.com
+      - SPRING_MAIL_PASSWORD=nxuuyaowthleefhm
+      - SPRING_DATASOURCE_URL=jdbc:postgresql://mail_db:5432/
+      - SPRING_DATASOURCE_USERNAME=root
+      - SPRING_DATASOURCE_PASSWORD=root
+      - EMAIL_FROMADDRESS=sharam.artur@gmail.com
+      - EMAIL_URL=http://localhost/api/v1/users/verification
+      - EMAIL_SUBJECT=Fitness Studio| Verify account
+      
   proxy:
     build: proxy
     image: fitness_image:1.0.0
