--- a/proxy/nginx-config/nginx-custom.conf
+++ b/proxy/nginx-config/nginx-custom.conf
@@ -36,4 +36,13 @@ server {
 		return 404;
 	}
 	
+	location /api/v1/audit {
+	    proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+
+        proxy_pass http://auditService:8080/audit;
+    
+	}
 }
