--- a/productService/src/main/resources/application.yml
+++ b/productService/src/main/resources/application.yml
@@ -1,17 +1,15 @@
 spring:
   datasource:
     driver-class-name: org.postgresql.Driver
-    username: postgres #<database_username>
-    password: 1 #<database_password>
-    url: jdbc:postgresql://localhost:5432/db #<database_url>
+    username: <database_username>
+    password: <database_password>
+    url: <database_url>
   kafka:
-    bootstrap-servers: artur:9092
+    bootstrap-servers: <server>
 
 token:
-  jwtSecret: secret #<secret>
-  jwtIssuer: ITAcademy #<issuer>
+  jwtSecret: <secret>
+  jwtIssuer: <issuer>
 
 userdetailservice:
-  url: http://localhost:8080/users/userDetails/mail/
-server:
-  port: 8090
+  url: <url>
